# ansible-factorio

./: LICENSE  README.md  pyproject.toml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: Dockerfile.j2  converge.yml  molecule.yml  prepare.yml  verify.yml
tasks/: configure.yml  install.yml  main.yml  mods.yml  run.yml  stop.yml
templates/: server-settings.json.j2  systemd.service  systemd.socket
vars/: main.yml
