[tool.poetry]
name = "ansible-factorio"
version = "0.1.0"
description = "Set up Factorio dedicated server"
authors = ["Wiktor <wikii122@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^4.8.0"
molecule = {extras = ["docker"], version = "^3.5.2"}

[tool.poetry.dev-dependencies]
molecule = "molecule[docker]"
ansible-lint = "^5.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
