[tool.poetry]
name = "ansible-factorio"
version = "0.1.0"
description = "Set up Factorio dedicated server"
authors = ["Wiktor <wikii122@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^4.8.0"
poetry = "^1.1.11"

[tool.poetry.dev-dependencies]
ansible-lint = "^5.2.1"
molecule = "^3.5.2"
molecule-vagrant = "^0.6.3"
python-vagrant = "^0.5.15"
molecule-docker = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
